# MicroPython_LIS3MDL

./: .readthedocs.yaml  README.rst  examples.json  package.json  pyproject.toml
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: lis3mdl_compass.py  lis3mdl_data_rate.py  lis3mdl_low_power_mode.py  lis3mdl_operation_mode.py  lis3mdl_scale_range.py  lis3mdl_simpletest.py
micropython_lis3mdl/: lis3mdl.py
